# RayTracing-Task5-sem4

./: CMakeLists.txt  Factory.hpp  Matrix44.cpp  Matrix44.hpp  MeshTriangle.cpp  MeshTriangle.hpp  Object.cpp  Object.hpp  ReadME.md  ReadME.txt  TriangleMeshFactory.cpp  TriangleMeshFactory.hpp  Vec2f.cpp  Vec2f.hpp  Vec3f.cpp  Vec3f.hpp  figures.txt  functions.cpp  functions.hpp  main.cpp  settings1.txt  settings2.txt  settings3.txt
